# sentiric-sip-example

./: .dockerignore  Cargo.toml  Dockerfile  README.md  build.rs
.github/workflows/: publish-docker.yml  release.yml
docs/: sip-firewall-setup.md  specification.md
src/: config.rs  error.rs  lib.rs  main.rs  util.rs
src/rtp/: codec.rs  ffi.rs  mod.rs  stream.rs  wav.rs
src/sip/: handler.rs  mod.rs  parser.rs  response.rs  state.rs  types.rs
