[package]
name = "sentiric-sip-core-service"
version = "0.1.21"
edition = "2021"

# Bu bölüm kasten boştur. Proje hiçbir harici Rust kütüphanesi kullanmaz.
[dependencies]

# C kodunu derlemek için build script'imizin ihtiyacı olan bağımlılıklar
[build-dependencies]
cc = "1.0"
glob = "0.3" # <-- EKSİK OLAN SATIR BUDUR. EKLENDİ.